<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Mario Contreras <marioc@nazul.net>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="action_login">Sign in</string>
    <string name="action_account">Account</string>
    <string name="action_assignment">Assignments</string>
    <string name="action_sync">Sync</string>
    <string name="app_name">My Resolutions</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_register">If you don\'t have an account yet, register here</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_nick">Nickname</string>
    <string name="action_register">Register</string>
    <string name="title_activity_account">Your Account</string>
    <string name="error_confirmation_failed">The passwords you entered did not match</string>
    <string name="action_account_save">Save</string>
    <string name="action_goal_delete">Delete</string>
    <string name="action_goal_edit">Edit</string>
</resources><!-- EOF -->
